--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+Chicago-2016-Summary.csv
 Chicago-Divvy-2016.csv
+NYC-2016-Summary.csv
 NYC-CitiBike-2016.csv
+Washington-2016-Summary.csv
 Washington-CapitalBikeshare-2016.csv
+BayArea_Y3_trip_data.csv
+BayArea-Y3-Summary.csv
